--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         to access our products and <br />
         services we specialize in facial make up and cosmetic surgery(we have
         qualified lisenced physicians for this procedure) we also have qualiy
-        make-up kits available <br />
+        make-up kits availablee <br />
       </p>
       <img src="vivi-images/IMG_E1699.JPG" />
     </div>
